updates for django 2.2.*

--- a/opal/scaffolding/plugin_scaffold/runtests.py.jinja2
+++ b/opal/scaffolding/plugin_scaffold/runtests.py.jinja2
@@ -34,6 +34,7 @@ settings.configure(DEBUG=True,
                                    'django.contrib.contenttypes',
                                    'django.contrib.sessions',
                                    'django.contrib.staticfiles',
+                                   'django.contrib.messages',
                                    'django.contrib.admin',
                                    'compressor',
                                    'opal',
